workloads/kube-burner/workloads/large-networkpolicy-egress/14_anp_allow-all-traffic-unknown-open-p27.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: allow-all-traffic-unknown-open-p27
spec:
  priority: 27
  subject:
    pods:
      namespaceSelector:
        matchLabels:
          anplabel: anp-unknown
      podSelector:
        matchLabels:
          anplabel: anp-unknown
  ingress:
  - name: "allow-all-ingress-from-anp-open"
    action: "Allow"
    from:
    - pods:
        namespaceSelector:
          matchLabels:
            anplabel: anp-open
        podSelector:
          matchLabels:
            anplabel: anp-open
  egress:
  - name: "allow-all-egress-to-anp-open"
    action: "Allow"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
            anplabel: anp-open
        podSelector:
          matchLabels:
            anplabel: anp-open
